--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -5,9 +5,9 @@
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+        <li><a href="{% url 'cctaxes:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
-    <p>No polls are available.</p>
+    <p>No property tax information found. Please enter a valid PIN</p>
 {% endif %}
