--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -1,13 +1,1 @@
-{% load static %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
-
-{% if latest_question_list %}
-    <ul>
-    {% for question in latest_question_list %}
-        <li><a href="{% url 'cctaxes:detail' question.id %}">{{ question.question_text }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No property tax information found. Please enter a valid PIN</p>
-{% endif %}
+<p>No property tax information is available.</p>
