--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -1,1 +1,36 @@
-<p>No property tax information is available.</p>
+{% load static %}<!DOCTYPE html>
+
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Property Tax Hunter | Cook County</title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  </head>
+
+  <body>
+
+    <h1 class="breadcrumb-item active"> Where Do My Property Taxes Go? </h1>
+
+    <div class="breadcrumb-item active">
+        <p> {{ greeting }} </p>
+
+        <form method="post">
+            {% csrf_token %}
+            {{ form }}
+            <button type="submit">Submit</button>
+        </form>
+
+
+    </div>
+
+    <!-- <form action="/results/" method="post">
+    {% csrf_token %}
+        <input type='text' name='pin' id="pin" value="{{ pin.id }}">
+    <input type="submit" value="Search PIN">
+    </form> -->
+
+  </body>
+
+</html>
