Connect results view

--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -22,6 +22,8 @@
             <button type="submit">Submit</button>
         </form>
 
+        {% block content %}
+        {% endblock %}
 
     </div>
 
