--- a/il_gov_counter/cctaxes/templates/cctaxes/results.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/results.html
@@ -1,6 +1,41 @@
 {% extends 'cctaxes/index.html' %}
 
 
-<h1> Information for PIN: {{ propaddress.pin }}, located at {{propadress.tax_code}}</h1>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Property Tax Hunter | Cook County</title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+  </head>
+
+  <body>
+
+    <h1 class="breadcrumb-item active"> Where Do My Property Taxes Go? </h1>
+
+    <div class="breadcrumb-item active">
+
+      {% block content %}
+
+          <h1> Your address is located in tax code {{ prop_tax_code }}</h1>
+          <h2> Your property taxes fund <b>{{ body_count }}</b> different local government bodies</h2>
+
+
+          {% for body in bodies %}
+          <ul>
+            {{ body }}
+          </ul>
+          {% endfor %}
+
+      {% endblock %}
+
+
+
+    </div>
+
+  </body>
+
+</html>
+
 
 <a action="/cctaxes/">Search another address?</a>
