--- a/il_gov_counter/cctaxes/templates/cctaxes/results.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/results.html
@@ -1,41 +1,31 @@
-{% extends 'cctaxes/index.html' %}
+{% extends 'base.html' %}
 
 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Property Tax Hunter | Cook County</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-  </head>
+  <!-- <head>
+    {% block head %}
+    <title>Property Tax Hunter | Results</title>
+    {% endblock %}
+  </head> -->
 
   <body>
 
-    <h1 class="breadcrumb-item active"> Where Do My Property Taxes Go? </h1>
-
-    <div class="breadcrumb-item active">
-
       {% block content %}
+          <div class="page-content">
+                  <h1> Your address is located in tax code {{ prop_tax_code }}</h1>
+                  <h2> Your property taxes fund <b>{{ body_count }}</b> different local government bodies</h2>
 
-          <h1> Your address is located in tax code {{ prop_tax_code }}</h1>
-          <h2> Your property taxes fund <b>{{ body_count }}</b> different local government bodies</h2>
+                  {% for body in bodies %}
+                  <ul>
+                    {{ body }}
+                  </ul>
+                  {% endfor %}
 
-
-          {% for body in bodies %}
-          <ul>
-            {{ body }}
-          </ul>
-          {% endfor %}
+                  <a href="{% url 'tax-impact' %}" onclick="prop_id.submit();"> How does this affect me? </a>
+          </div>
 
       {% endblock %}
-
-
-
-    </div>
 
   </body>
 
 </html>
-
-
-<a action="/cctaxes/">Search another address?</a>
