exported visualizations, writeup

--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -1,36 +1,75 @@
-{% extends 'base.html' %}
 
-<!DOCTYPE html>
 
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    {% block head %}
-    <title>Property Tax Hunter | Cook County</title>
-    {% endblock %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v3.8.5">
+    <title>Property Tax Explorer | Cook County</title>
+
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/cover/">
+
+    <!-- Bootstrap core CSS -->
+    <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+    <!-- Custom styles for this template -->
+    <!-- <link href="https://getbootstrap.com/docs/4.3/examples/cover/cover.css" rel="stylesheet"> -->
   </head>
 
-  {% block body %}
-  <body>
 
-    <h1 class="breadcrumb-item active"> Where Do My Property Taxes Go? </h1>
 
-    <div class="breadcrumb-item active">
-        <p> {{ greeting }} </p>
+  <body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
-        <form method="post">
-            {% csrf_token %}
-            {{ form }}
-            <button type="submit">Submit</button>
-        </form>
 
-    </div>
+  <main role="main" class="inner cover">
+    <h1 class="cover-heading">Property Tax Explorer | Cook County</h1>
+    <h3 class="masthead-brand"> Cook County homeowners pay property taxes every year, but the process is confusing and opaque.
+    <p class="lead"> Enter your address PIN to find out where <b>your</b> taxes go and how they compare with the rest of the county.</p>
 
-      {% block content %}
-      {% endblock %}
+    <form method="post">
+        {% csrf_token %}
+        {{ form }}
+        <button class="btn btn-lg btn-secondary" type="submit">Submit</button>
+    </form>
 
-      {% block page_content %}
-      {% endblock %}
+  </main>
 
-  </body>
-  {% endblock %}
+</div>
+
+{% block content %}
+{% endblock %}
+
+{% block page_content %}
+{% endblock %}
+
+    <footer class="mastfoot mt-auto">
+
+    </footer>
+
+    </body>
+
+
 </html>
