--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -4,38 +4,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v3.8.5">
     <title>Property Tax Explorer | Cook County</title>
-
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/cover/">
 
     <!-- Bootstrap core CSS -->
     <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> -->
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
+    <meta charset="utf-8">
+    <title>Property Tax 1-2-3 | Cook County</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="https://bootswatch.com/_assets/css/custom.min.css">
+    <script>
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-    <!-- Custom styles for this template -->
-    <!-- <link href="https://getbootstrap.com/docs/4.3/examples/cover/cover.css" rel="stylesheet"> -->
+     var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-23019901-1']);
+      _gaq.push(['_setDomainName', "bootswatch.com"]);
+        _gaq.push(['_setAllowLinker', true]);
+      _gaq.push(['_trackPageview']);
+
+     (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+
+    </script>
 
     {% block head %}
     {% endblock %}
@@ -43,22 +39,28 @@
   </head>
 
 
-
   <body class="text-center">
+
+
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Property Tax Explorer | Cook County</h1>
-    <h3 class="masthead-brand"> Cook County homeowners pay property taxes every year, but the process can be a black box.
-    <p class="lead"> Enter your address PIN to find out where <b>your</b> taxes go and how they compare with the rest of the county.</p>
+    <h1 class="cover-heading">Cook County <br> Property Tax 1-2-3 </h1>
+    <br>
+    <h3 class="masthead-brand"> Cook County homeowners pay property taxes every year, but the process can seem like a black box.</h3>
 
+    <p class="lead"> Enter your address PIN to find out where <b>your</b> taxes go and how they compare with the rest of the county.</p>
+    <br>
+    <h2>
     <form method="post">
         {% csrf_token %}
         {{ form }}
-        <button class="btn btn-lg btn-secondary" type="submit">Submit</button>
+        <button class="btn btn-primary btn-lg" type="submit">Submit</button>
     </form>
-
+  </h2>
+    <br>
+    <p class="lead"> If you don't have a PIN, try my website out using PIN: 16171150100000. </p>
   </main>
 
 </div>
