--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -33,6 +33,99 @@
 
     </script>
 
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+    $(document).ready(function(){
+      // Add smooth scrolling to all links
+      $("a").on('click', function(event) {
+
+        // Make sure this.hash has a value before overriding default behavior
+        if (this.hash !== "") {
+          // Prevent default anchor click behavior
+          event.preventDefault();
+
+          // Store hash
+          var hash = this.hash;
+
+          // Using jQuery's animate() method to add smooth page scroll
+          // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+          $('html, body').animate({
+            scrollTop: $(hash).offset().top
+          }, 800, function(){
+
+            // Add hash (#) to URL when done scrolling (default click behavior)
+            window.location.hash = hash;
+          });
+        } // End if
+      });
+    });
+
+    </script>
+
+    <style>
+    html, body {
+      overflow: hidden;
+    }
+    #section1 {
+      height: 800px;
+      background-color: white;
+    }
+
+    #section2 {
+      height: 800px;
+      background-color: white;
+    }
+
+    #section3 {
+      height: 1000px;
+      background-color: white;
+    }
+
+    #section4 {
+      height: 800px;
+      background-color: white;
+    }
+
+    #section5 {
+      height: 500px;
+      background-color: white;
+    }
+
+    #section6 {
+      height: 500px;
+      background-color: white;
+    }
+
+    #section7 {
+      height: 800px;
+      background-color: white;
+    }
+
+    #section8 {
+      height: 500px;
+      background-color: white;
+    }
+
+    #section9 {
+      height: 800px;
+      background-color: white;
+    }
+
+    #section10 {
+      height: 1000px;
+      background-color: white;
+    }
+
+    #section11 {
+      height: 800px;
+      background-color: white;
+    }
+
+
+
+    </style>
+
     {% block head %}
     {% endblock %}
 
@@ -41,16 +134,15 @@
 
   <body class="text-center">
 
-
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Cook County <br> Property Tax 1-2-3 </h1>
+    <h1 class="cover-heading">Cook County <br> <b>Property Tax 1-2-3</b> </h1>
     <br>
     <h3 class="masthead-brand"> Cook County homeowners pay property taxes every year, but the process can seem like a black box.</h3>
 
-    <p class="lead"> Enter your address PIN to find out where <b>your</b> taxes go and how they compare with the rest of the county.</p>
+    <p class="lead"> Enter your address PIN to find out where your taxes go and how they compare with the rest of the county.</p>
     <br>
     <h2>
     <form method="post">
@@ -60,7 +152,7 @@
     </form>
   </h2>
     <br>
-    <p class="lead"> If you don't have a PIN, try my website out using PIN: 16171150100000. </p>
+    <p class="lead"> If you don't have a PIN, try my website out using PIN: 16171150100000 or 33074170350000. </p>
   </main>
 
 </div>
@@ -70,6 +162,22 @@
 
 {% block page_content %}
 {% endblock %}
+
+<script>
+    showhide('div1');
+    function showhide(id) {
+      if (document.getElementById) {
+        var divid = document.getElementById(id);
+        var divs = document.getElementsByClassName("hideable");
+        for (var i = 0; i < divs.length; i = i + 1) {
+          $(divs[i]).fadeOut("slow");
+        }
+        $(divid).fadeIn("slow");
+      }
+      return false;
+    }
+</script>
+
 
     <footer class="mastfoot mt-auto">
 
