--- a/il_gov_counter/cctaxes/templates/cctaxes/results.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/results.html
@@ -250,7 +250,7 @@
                     <br>
                     <h3> Not satisfied with your tax situation? Think your community should spend on better services?
                          Call your representatives, city council or mayor, and don't forget to vote in your local elections! </h3>
-                    <h3> <a href='#' class='btn btn-primary btn-lg'> Search Another Address </a> </h3>
+                    <h3> <a href='#http://sawyerm.pythonanywhere.com/cctaxes' class='btn btn-primary btn-lg'> Search Another Address </a> </h3>
                   </div>
 
 
